--- a/Index.html
+++ b/Index.html
@@ -10,35 +10,35 @@
 <body>
 
 	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<div class="login100-pic js-tilt" data-tilt>
+		<div class="container-login">
+			<div class="wrap-login">
+				<div class="login-pic js-tilt" data-tilt>
 					<img src="images/img-01.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form">
-					<span class="login100-form-title">
+				<form class="login-form validate-form">
+					<span class="login-form-title">
 						Digitalt Kørekort Login
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="E-mail">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
+					<div class="wrap-input validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input" type="text" name="email" placeholder="E-mail">
+						<span class="focus-input"></span>
+						<span class="symbol-input">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Kodeord">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
+					<div class="wrap-input validate-input" data-validate = "Password is required">
+						<input class="input" type="password" name="pass" placeholder="Kodeord">
+						<span class="focus-input"></span>
+						<span class="symbol-input">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
+					<div class="container-login-form-btn">
+						<button class="login-form-btn">
 							Login
 						</button>
 					</div>
