--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 </head>
-<body>
+<body style="margin: 0px">
 
-	<div class="limiter">
+	<div>
 		<div class="container-login">
 			<div class="wrap-login">
 				<div class="login-pic js-tilt" data-tilt>
@@ -18,7 +18,7 @@
 
 				<form class="login-form validate-form">
 					<span class="login-form-title">
-						Digitalt Kørekort Login xD
+						Digitalt Kørekort Login
 					</span>
 
 					<div class="wrap-input validate-input" data-validate = "Valid email is required: ex@abc.xyz">
