--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 
 				<form class="login-form validate-form">
 					<span class="login-form-title">
-						Digitalt Kørekort Login xD
+						Digitalt Kørekort Login
 					</span>
 
 					<div class="wrap-input validate-input" data-validate = "Valid email is required: ex@abc.xyz">
